--- a/Index.html
+++ b/Index.html
@@ -3,33 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile Website</title>
+    <title>My Website</title>
     <style>
         body {
-            margin: 0;
-            padding: 0;
-            background-image: url('https://raw.githubusercontent.com/Femboycult/Verify/main/IMG_0141.jpeg');
+            background-image: url('https://raw.githubusercontent.com/Femboycult/Images/main/IMG_0141.jpeg');
             background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
             background-repeat: no-repeat;
+            background-attachment: fixed;
+            height: 100vh;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: Arial, sans-serif;
         }
-        .content {
-            padding: 20px;
+        h1 {
+            color: white;
             text-align: center;
-            color: white;
-        }
-        a {
-            color: white;
-            text-decoration: none;
         }
     </style>
 </head>
 <body>
-    <div class="content">
-        <h1>Welcome to My Mobile Website</h1>
-        <p>This is a simple mobile website with a link as the background.</p>
-        <a href="your-link-url">Click here</a> to visit the link.
-    </div>
+    <h1>Welcome to My Website</h1>
 </body>
 </html>
